# elker

./: .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  README.md  TODO  requirements.txt
.github/: constants.env
.github/workflows/: ci.yml  pylint.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  InterproceduralOptimization.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
elker/: CMakeLists.txt  base64.cpp  base64.hpp  collections.hpp  config.hpp.in  elker.cpp  elker.hpp  log.cpp  log.hpp  partitions.hpp  skin.cpp  skin.hpp  tradeup.cpp  tradeup.hpp  util.hpp
motek/: CMakeLists.txt  base64.cpp  calculator.cpp  combinatorics.cpp  combinatorics.hpp  log.cpp  partitions.hpp  skin.cpp  tradeup.cpp  tradeup.cpp~RF19e347f.TMP  variations.hpp
motek/include/motek/: base64.hpp  calculator.hpp  combinate.hpp  combinatorics.hpp  log.hpp  partitions.hpp  skin.hpp  tradeup.hpp  variations.hpp
resources/branding/: elker-logo.txt
script/: checkcsgostash.py  create.sql  csgo_english.txt  dumpskins.py  elker.py  extract_vpk.py  function.py  genvars.py  getskins.js  getskins.py  market.py  scratch.py  skins.csv  skins.json  updateprices.py
test/: CMakeLists.txt  tests.cpp
